# tablemutant

./: .gitignore  LICENSE  README.md  pyproject.toml  settings.json  test.prompt
.github/workflows/: release.yml
resources/icons/: README.txt
tablemutant/: __main__.py
tablemutant/core/: __init__.py  column_generator.py  embedding_cache.py  model_manager.py  rag_processor.py  settings_manager.py  table_processor.py  tls_config.py
tablemutant/ui/: __init__.py
tablemutant/ui/windows/: __init__.py  embedding_progress.py  example.py  file_selection.py  initialization.py  model_selection.py  output_definition.py  preview_results.py  processing.py  settings.py  source_selection.py
